# kmymoney_currencies

./: .gitignore  excel2ofx.py  pyproject.toml
kmymoney_currencies/: daniel.txt  db.sqlite3  manage.py  requirements.txt
kmymoney_currencies/kcurrency/: apps.py  dolarblue.py  forex.py  markets.py  urls.py  views.py
kmymoney_currencies/kcurrency/markets/: __init__.py  yahoo_finance.py
kmymoney_currencies/kcurrency/templates/: eurusd.html  exchange_rate.html  market_data.html
kmymoney_currencies/kmymoney_currencies/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: Extracto_00095716476.xlsx  Extracto_00095716476_20250430.xlsx
